# dali-view-android

./: .gitignore  README.md  build.sh  local.properties  settings.gradle
dali/: .gitignore  build.sh  build_adaptor.sh  build_core.sh  build_toolkit.sh  env.sh
daliview/: build.gradle
daliview/src/androidTest/java/com/sec/daliview/: ExampleInstrumentedTest.java
daliview/src/main/: AndroidManifest.xml
daliview/src/main/cpp/: CMakeLists.txt  daliview.cpp
daliview/src/main/java/com/sec/daliview/: DaliView.java
daliview/src/main/res/values/: strings.xml
daliview/src/test/java/com/sec/daliview/: ExampleUnitTest.java
